--- a/app/src/main/res/layout/card_stade.xml
+++ b/app/src/main/res/layout/card_stade.xml
@@ -10,6 +10,9 @@
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:layout_margin="7dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         android:backgroundTint="@color/green"
         app:cardCornerRadius="7dp"
         app:cardElevation="7dp"
