--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#01D681</color>
     <color name="dgreen_2">#FF05C10C</color>
+    <color name="yellow_222">#FFC107</color>
 </resources>
