--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="green">#01D681</color>
     <color name="dgreen_2">#FF05C10C</color>
     <color name="yellow_222">#FFC107</color>
+    <color name="color_333">#FFEB3B</color>
 </resources>
