--- a/app/src/main/res/layout/fragment_equipe.xml
+++ b/app/src/main/res/layout/fragment_equipe.xml
@@ -8,12 +8,25 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewequipe"
-        android:layout_width="409dp"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="600dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:listitem="@layout/cardequipe" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="156dp"
+        android:backgroundTint="@color/yellow_222"
+        android:text="@string/add_equipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/cardequipe" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
