--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             android:id="@+id/profileImage"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/ic_baseline_person_24"
             app:civ_border_color="#01D681"
             app:civ_border_width="5dp"
@@ -114,9 +114,10 @@
             android:id="@+id/button23"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="158dp"
-            android:layout_marginEnd="159dp"
-            android:text="Button"
+            android:layout_marginStart="124dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="124dp"
+            android:text="@string/Update_Profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
