--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -4,6 +4,10 @@
         android:id="@+id/stadeyserFragment"
         android:icon="@drawable/ic_baseline_grass_24"
         android:title="Stade"/>
+    <item
+        android:id="@+id/userJoueurListeFragment"
+        android:icon="@drawable/ic_baseline_grass_24"
+        android:title="Joueur"/>
 
     <item
         android:id="@+id/profileUserFragment"
