--- a/app/src/main/res/layout/card_user_joueur.xml
+++ b/app/src/main/res/layout/card_user_joueur.xml
@@ -11,10 +11,13 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/newnew"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
+        android:padding="5dp"
         card_view:cardCornerRadius="4dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
