--- a/app/src/main/res/layout/fragment_user_equipe_details.xml
+++ b/app/src/main/res/layout/fragment_user_equipe_details.xml
@@ -51,18 +51,18 @@
     app:layout_constraintTop_toBottomOf="@+id/nomDetailsEquipe52" />
 
     <TextView
-    android:id="@+id/descriptionDetailsEquipe52"
-    android:layout_width="326dp"
-    android:layout_height="155dp"
-    android:layout_marginStart="42dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="43dp"
-    android:text="@string/description"
-    android:textColor="@color/black"
-    android:textSize="16sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView952" />
+        android:id="@+id/descriptionDetailsEquipe52"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="43dp"
+        android:text="@string/description"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView952" />
 
     <Button
         android:id="@+id/button8"
@@ -75,4 +75,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionDetailsEquipe52" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/ajouterVotreJoueur"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
